fixing a few layout issues

--- a/ui-blog/src/main/webapp/css/application.css
+++ b/ui-blog/src/main/webapp/css/application.css
@@ -48,19 +48,42 @@ _______________________________________*/
 	padding-bottom: 15px;
 	font-size: 30px;
 }
+.sidebar-header h2 {
+	font-weight: 700;
+}
 .sidebar-content {
 	padding-bottom: 15px;
 	font-size: 20px;
 }
-.sidebar-content li {
+.sidebar-content a {
 	text-decoration: none;
-	margin-bottom: 10px;
+	color: #cd5c5c;
+}
+.sidebar-content li {
+	margin: 0 73px 10px;
+  padding: 10px 0;
+  cursor: pointer;
+   -webkit-transition: all 75ms ease-out;
+  -moz-transition: all 75ms ease-out;
+  transition: all 75ms ease-out;
+}
+.sidebar-content li:hover {
+	background: #cd5c5c;
+}
+.sidebar-content li:hover > a {
+	color: #fff;
+}
+.current {
+	background: #cd5c5c;
+}
+.current > a {
+	color: #fff;
 }
 .sidebar-action {
 	margin-top: 20px;
 }
 .create-new {
-	background: #2980b9;
+	background: #cd5c5c;
 	padding: 10px 30px;
 	font-size: 22px;
 	color: #fff !important;
@@ -72,7 +95,7 @@ a.create-new:hover {
 	text-decoration: none;
 }
 .create-new:hover {
-	background: #34495e;
+	background: #c0392b;
 }
 
 /* MAIN BLOG CONTENT AREA
@@ -82,6 +105,7 @@ _______________________________________*/
 	padding: 30px;
 	border-left: 4px solid #000;
 	min-height: 100vh;
+	background: #f2f2f2;
 }
 .content-area-title {
 	font-size: 40px;
@@ -90,8 +114,11 @@ _______________________________________*/
 .content-area-text {
 	font-size: 25px;
 	clear: both;
+	padding: 15px;
 }
-
+.main-blog-list .content-area-text {
+	padding: 0;
+}
 .blog-post {
 	padding: 15px;
 	margin-bottom: 20px;
@@ -116,6 +143,9 @@ _______________________________________*/
 	font-size: 18px;
 	margin-right: 50px;
 }
+.edit-delete a {
+	color: #c0392b;
+}
 
 /*  NEW POST
 ________________________________*/
@@ -131,7 +161,11 @@ label {
 	font-size: 35px;
 }
 .new-post-body {
-	height: 100%;
+	min-height: 100%;
+	background: #f2f2f2;
+}
+.entry-form {
+	padding-bottom: 20px;
 }
 #title, #text {
 	width: 100%;
@@ -154,6 +188,15 @@ label {
   border-radius: 0 !important;
   width: 100%;
   margin-top: 15px;
+  background: #cd5c5c;
+  border: none;
+  -webkit-transition: all 200ms ease-out;
+  -moz-transition: all 200ms ease-out;
+  transition: all 200ms ease-out;
+
+}
+.save-post-btn:hover {
+	background: #c0392b
 }
 
 /* EDIT POST
@@ -167,7 +210,17 @@ _____________________________________*/
 }
 .edit-post-btn {
 	width: 200px;
+	font-size: 20px;
+	border: none;
 	border-radius: 0 !important;
 	margin: 0 auto;
 	display: block;
+	background: #cd5c5c;
+  -webkit-transition: all 200ms ease-out;
+  -moz-transition: all 200ms ease-out;
+  transition: all 200ms ease-out;
+
+}
+.edit-post-btn:hover {
+	background: #c0392b;
 }
